# pyctf-lite

./: README.md  pyproject.toml  setup.py
addMarker/: delMarker.py
pyctf/: CPersist.py  __init__.py  classfileFunc.py  ctf_meg4.py  ctf_res4.py  dsopen.py  fid.py  getHC.py  getHM.py  getfidrot.py  markers.py  segments.py  util.py
pyctf/addMarker/: addMarker.py
